--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -4,7 +4,7 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg1.jpg") top right no-repeat;
+  background: url("../img/hero-bg1.png") top right no-repeat;
   background-size: cover;
   position: relative;
   
