--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: rgb(0, 0, 0);
 }
 
 #preloader:before {
